--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,6 @@
 adafruit-circuitpython-scd4x>=1.2.0
 RPi.GPIO>=0.7.1
 
-# Database and storage
-sqlite3
-
 # MQTT communication
 paho-mqtt>=1.6.1
 
@@ -37,10 +34,17 @@ flake8>=4.0.0
 # System monitoring
 psutil>=5.9.0
 
-# UUID generation
-uuid
+# Web server for local API
+flask>=2.0.0
+flask-restful>=0.3.9
 
-# JSON handling (built-in)
+# mDNS for local discovery
+zeroconf>=0.38.0
+
+# Built-in modules (commented out as reminders)
+# sqlite3 (built-in)
+# uuid (built-in)
+# json (built-in)
 # datetime (built-in)
 # threading (built-in)
 # logging (built-in)
