Add documentation, core scripts, and config files
Added multiple markdown documentation files (guides, API specs, logging, deployment), example environment and service files, and core Python/Arduino scripts for device operation, data logging, automation, and network management. Updated main application, configuration, and utility modules to support new features and improved integration. Initial setup for Raspberry Pi and Arduino Uno, including actuator and sensor management, live dashboard, and installation scripts.

python integrated_server.py

--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,10 @@ psutil>=5.9.0
 # Web server for local API
 flask>=2.0.0
 flask-restful>=0.3.9
+flask-cors>=3.0.10
+
+# Serial communication with Arduino
+pyserial>=3.5
 
 # mDNS for local discovery
 zeroconf>=0.38.0
