--- a/config/device_config.yaml
+++ b/config/device_config.yaml
@@ -13,7 +13,7 @@ device:
 
 # Backend Configuration
 backend:
-  api_url: "https://mash-backend.onrender.com/api"
+  api_url: "https://mash-backend-api-production.up.railway.app/api"
   api_key: ""
   timeout: 30
 
