Add touchscreen UI screens, assets, and planning docs
Introduced new Kivy touchscreen UI screens (splash, setup wizard, alerts, AI insights, help), navigation widgets, and supporting data/config files. Added Figma design assets, planning and architecture documentation, and updated .gitignore. Modified main UI and backend scripts to support new features and state management.

--- a/touchscreen_ui/requirements.txt
+++ b/touchscreen_ui/requirements.txt
@@ -17,6 +17,9 @@ python-socketio[client]>=5.10.0
 websocket-client>=1.6.4
 paho-mqtt>=1.6.1  # MQTT client for real-time updates
 
+# QR Code generation (for Setup Wizard)
+qrcode[pil]>=7.4.0
+
 # System utilities
 netifaces>=0.11.0  # Network interface info
 psutil>=5.9.6      # System resource monitoring
