--- a/touchscreen_ui/requirements.txt
+++ b/touchscreen_ui/requirements.txt
@@ -23,6 +23,7 @@ qrcode[pil]>=7.4.0
 # System utilities
 netifaces>=0.11.0  # Network interface info
 psutil>=5.9.6      # System resource monitoring
+python-dotenv>=0.19.0  # Environment variable loading
 
 # Optional: Camera support (if adding camera feed later)
 # opencv-python-headless>=4.8.0
