Add setup flow and UI improvements to PyQt6 app
Introduces first-time setup flow with SetupFlowWindow, chamber configuration, onboarding, and related screens. Adds icon utilities for SVG support and updates icon mapping to use SVGs. Refines UI styles, colors, and font sizes for better touchscreen experience. Updates navigation, main window, and screen layouts for improved usability. Adds new assets and reorganizes icon files. Updates environment configuration for JWT authentication. Removes obsolete test file.

--- a/.env
+++ b/.env
@@ -17,9 +17,24 @@ DEVICE_SERIAL_NUMBER=D5A91F
 # ----------------------------------------------------------------------------
 # BACKEND API CONFIGURATION
 # ----------------------------------------------------------------------------
-BACKEND_API_URL=https://mash-backend-api-production.up.railway.app/api/v1
+BACKEND_API_URL=https://mash-backend-production.up.railway.app/api/v1
 BACKEND_API_KEY=
 BACKEND_TIMEOUT=30
+
+# ============================================================================
+# JWT - JSON Web Token Authentication
+# ============================================================================
+# Usage: REST API authentication, WebSocket connections, session management
+# CRITICAL: Change JWT_SECRET in production! Generate: openssl rand -hex 32
+
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+JWT_EXPIRATION=1d                       # Default token expiry: 1 day
+
+# Session Configuration
+SESSION_DURATION=7d                     # JWT access token expiry: 7 days
+REFRESH_TOKEN_DURATION=30d              # Refresh token expiry: 30 days
+MAX_SESSIONS_PER_USER=5                 # Max concurrent sessions per user
+
 
 # ----------------------------------------------------------------------------
 # FIREBASE CONFIGURATION
