--- a/env.example
+++ b/env.example
@@ -13,6 +13,20 @@ MAC_ADDRESS=your_mac_address
 BACKEND_API_URL=https://mash-backend.onrender.com/api
 BACKEND_API_KEY=your_api_key_here
 
+# ============================================================================
+# JWT - JSON Web Token Authentication
+# ============================================================================
+# Usage: REST API authentication, WebSocket connections, session management
+# CRITICAL: Change JWT_SECRET in production! Generate: openssl rand -hex 32
+
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+JWT_EXPIRATION=1d                       # Default token expiry: 1 day
+
+# Session Configuration
+SESSION_DURATION=7d                     # JWT access token expiry: 7 days
+REFRESH_TOKEN_DURATION=30d              # Refresh token expiry: 30 days
+MAX_SESSIONS_PER_USER=5                 # Max concurrent sessions per user
+
 # MQTT Configuration
 MQTT_BROKER_URL=mqtt://your_mqtt_broker:1883
 MQTT_USERNAME=your_mqtt_username
